--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ exceptiongroup==1.2.0
 Flask==3.0.0
 Flask-Cors==4.0.0
 Flask-RESTful==0.3.10
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
 importlib-metadata==7.0.1
@@ -14,6 +15,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 outcome==1.3.0.post0
+packaging==23.2
 PySocks==1.7.1
 pytz==2023.3.post1
 selenium==4.16.0
