--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 exceptiongroup==1.2.0
+fake-useragent==1.4.0
 Flask==3.0.0
 Flask-Cors==4.0.0
 Flask-RESTful==0.3.10
@@ -12,6 +13,7 @@ gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
 importlib-metadata==7.0.1
+importlib-resources==6.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
